bug:fix web page content moving when scroll bar is visible

--- a/portfolio/src/main/webapp/css/index.css
+++ b/portfolio/src/main/webapp/css/index.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 #page-heading {
   font-family: 'Open Sans', sans-serif;
   margin-left: auto;
